3.8.0/_sources/plot_types/index.rst.txt
:orphan:

.. _plot_types:

.. redirect-from:: /tutorials/basic/sample_plots

Plot types
==========

Overview of many common plotting commands provided by Matplotlib.

See the `gallery <../gallery/index.html>`_ for more examples and
the `tutorials page <../tutorials/index.html>`_ for longer examples.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Pairwise data
-------------

Plots of pairwise :math:`(x, y)`, tabular :math:`(var\_0, \cdots, var\_n)`,
and functional :math:`f(x)=y` data.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.plot.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_plot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.scatter.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_scatter_plot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_scatter_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">scatter(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.bar.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_bar_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_bar.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">bar(x, height)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.stem.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_stem_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_stem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">stem(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.fill_between.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_fill_between_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_fill_between.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">fill_between(x, y1, y2)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="stackplot(x, y)">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_stackplot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_stackplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">stackplot(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.stairs.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_stairs_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_basic_stairs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">stairs(values)</div>
    </div>


.. raw:: html

    </div>


Statistical distributions
-------------------------

Plots of the distribution of at least one variable in a dataset. Some of these
methods also compute the distributions.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.hist.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_hist_plot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_hist_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hist(x)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.boxplot.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_boxplot_plot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_boxplot_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">boxplot(X)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.errorbar.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_errorbar_plot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_errorbar_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">errorbar(x, y, yerr, xerr)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.violinplot.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_violin_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_violin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">violinplot(D)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.eventplot.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_eventplot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_eventplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">eventplot(D)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.hist2d.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_hist2d_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_hist2d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hist2d(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.hexbin.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_hexbin_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_hexbin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hexbin(x, y, C)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.pie.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_pie_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_pie.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">pie(x)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.ecdf.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_ecdf_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_stats_ecdf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ecdf(x)</div>
    </div>


.. raw:: html

    </div>


Gridded data:
-------------

Plots of arrays and images :math:`Z_{i, j}` and fields :math:`U_{i, j}, V_{i, j}`
on `regular grids <https://en.wikipedia.org/wiki/Regular_grid>`_ and
corresponding coordinate grids :math:`X_{i,j}, Y_{i,j}`.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.imshow.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_imshow_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_imshow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">imshow(Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="~.axes.Axes.pcolormesh is more flexible than ~.axes.Axes.imshow in that the x and y vectors nee...">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_pcolormesh_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_pcolormesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">pcolormesh(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.contour.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_contour_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_contour.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">contour(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.contourf.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_contourf_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_contourf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">contourf(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.barbs.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_barbs_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_barbs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">barbs(X, Y, U, V)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.quiver.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_quiver_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_quiver.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">quiver(X, Y, U, V)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.streamplot.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_streamplot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_arrays_streamplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">streamplot(X, Y, U, V)</div>
    </div>


.. raw:: html

    </div>


Irregularly gridded data
------------------------

Plots of data :math:`Z_{x, y}` on `unstructured grids <https://en.wikipedia.org/wiki/Unstructured_grid>`_ ,
unstructured coordinate grids :math:`(x, y)`, and 2D functions :math:`f(x, y) = z`.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.tricontour.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_tricontour_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_unstructured_tricontour.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">tricontour(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.tricontourf.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_tricontourf_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_unstructured_tricontourf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">tricontourf(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.tripcolor.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_tripcolor_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_unstructured_tripcolor.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">tripcolor(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.triplot.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_triplot_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_unstructured_triplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">triplot(x, y)</div>
    </div>


.. raw:: html

    </div>


3D and volumetric data
----------------------

Plots of three-dimensional :math:`(x,y,z)`, surface :math:`f(x,y)=z`, and
volumetric :math:`V_{x, y, z}` data using the `mpl_toolkits.mplot3d` library.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.scatter.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_scatter3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_scatter3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D scatterplot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_surface.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_surface3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_surface3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D surface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_trisurf.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_trisurf3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_trisurf3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Triangular 3D surfaces</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.voxels.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_voxels_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_voxels_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D voxel / volumetric plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_wireframe.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_wire3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_wire3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D wireframe plot</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /plot_types/basic/index.rst
   /plot_types/stats/index.rst
   /plot_types/arrays/index.rst
   /plot_types/unstructured/index.rst
   /plot_types/3D/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: plot_types_python.zip </plot_types/plot_types_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: plot_types_jupyter.zip </plot_types/plot_types_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
